<resources>
    <string name="app_name">Lovoo</string>
    <string name="tab_text_1">Rooms</string>
    <string name="tab_text_2">RoomsFact</string>
    <string name="room_name">Room name</string>
    <string name="type_label">Type :</string>
    <string name="department_label">Department :</string>
    <string name="officeLevel_label">Office Level :</string>
    <string name="room_number_label">Room Number :</string>
    <string name="booked_time_label">Time :</string>
    <string name="booked_length_label">Duration :</string>
    <string name="booked_label">Booked :</string>
    <string name="lovooFact_label">LovooFact :</string>
    <string name="title_label">Title :</string>
    <string name="text_label">LovooFact :</string>
    <string name="no_type">no type</string>
    <string name="meeting_type">meeting</string>
    <string name="time_hint">Time</string>
    <string name="duration_hint">Duration</string>
    <string name="book_room">Book Room</string>
</resources>
